# Sistema-de-Busca-Otimizado-para-Catalogo-de-Produtos-CASE

./: Cargo.toml  README.md
src/: index.rs  lib.rs  main.rs  model.rs  search.rs  tokenizer.rs
tests/: integration_tests.rs
