[package]
name = "megastore_search"
version = "0.1.0"
edition = "2021"
authors = ["Seu Nome <seuemail@example.com>"]
description = "Search system prototype for MegaStore using an inverted index in Rust."

[dependencies]
regex = "1.11"
lazy_static = "1.4"
rust-stemmers = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

[dev-dependencies]
rand = "0.9"